<resources>
    <string name="app_name">SCS-DDOS-Project-HIVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ip_scan">IP Scan</string>
    <string name="menu_ddos">DDOS</string>
    <string name="menu_nmap">Nmap</string>
    <string name="DDOS">DDOS Attack</string>
    <string name="etxt_hint_ip">Victim IP</string>
    <string name="thread_count">Thread Count</string>

    <string name="nmap_command">nmap</string>
    <string name="scan_btn">Scan</string>
    <string name="scan_command_hint">Enter your flags here...</string>
    <string name="paste_btn">Paste CB</string>
    <string name="get_pip_btn">Get P-IP</string>
</resources>