<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ddos">


    <fragment
        android:id="@+id/nav_ddos"
        android:name="com.dd.scs_ddos_project_hive.ui.ddos.DDOSFragment"
        android:label="@string/menu_ddos"
        tools:layout="@layout/fragment_ddos" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dd.scs_ddos_project_hive.ui.scanip.ScanIPFragment"
        android:label="@string/menu_ip_scan"
        tools:layout="@layout/fragment_ip_snif" />



    <fragment
        android:id="@+id/nav_nmap"
        android:name="com.dd.scs_ddos_project_hive.ui.slideshow.NmapFragment"
        android:label="@string/menu_nmap"
        tools:layout="@layout/fragment_nmap" />
</navigation>