<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.NmapFragment">

    <TextView
        android:id="@+id/scan_output_TV"
        android:scrollbars="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:maxLines="1000"
        android:layout_above="@+id/flags_ET"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <EditText
        android:id="@+id/flags_ET"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lin_lay"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/scan_command_hint" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lin_lay">

        <Button
            android:id="@+id/public_ip_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_pip_btn"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/paste_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paste_btn"
            android:enabled="false"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/scan_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_btn" />
    </LinearLayout>




    <!--<TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_BT"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

</RelativeLayout>